# nanoDist

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
benchmarks/: benchmark_memory.py  run_hpc_simulation.py  train.sh
conf/: config.yaml
conf/dataset/: default.yaml
conf/model/: default.yaml
docker/: Dockerfile  docker-compose.yml
src/distributed_trainer/core/: autograd.py  layers.py  memory_manager.py  mixed_precision.py  trainer.py
src/distributed_trainer/data/: distributed_sharder.py  ingestion.py  preprocessor.py
src/distributed_trainer/distributed/: primitives.py  ring_allreduce.py
src/distributed_trainer/evaluation/: metrics.py
src/distributed_trainer/optim/: adam.py  base_optimizer.py  zero_sharded_adam.py
src/distributed_trainer/optimization/: hpo.py  regularizers.py  tuner.py
src/distributed_trainer/serving/: app.py  inference_server.py  tensor_serializer.py
src/distributed_trainer/utils/: checkpointing.py  logger.py  telemetry.py
tests/: test_engine.py
tests/test_core/: test_autograd.py  test_memory.py
tests/test_data/: test_sharder.py
tests/test_distributed/: test_ring_allreduce.py
