[project]
name = "nanodist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "hydra-core>=1.3.3",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "uvicorn>=0.49.0",
    "wandb>=0.27.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
